@@ -1,3 +1,10 @@
+Fri Apr 28 15:53:54 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	* interrupts.c (deliver_hardware_interrupt): Print time trace in
+ 	decimal.
+	* events.c (event_queue_process): Cleanup trace message.
+	(update_time_from_event): Trace full event queue.
+
 2000-03-25  Geoff Keating  <geoffk@cygnus.com>
 
 	* ppc-instructions (Disabled_Exponent_Underflow): Increment
